force-app/main/default/objects/Int_OLMN_Net_Investment__c/fields/CAP_ROLLOVER_FEE_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>CAP_ROLLOVER_FEE_AMOUNT__c</fullName>
    <label>CAP ROLLOVER FEE AMOUNT</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>