force-app/main/default/objects/Int_OLMN_Net_Investment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Committed__c</columns>
    <columns>VENDOR_NUMBER__c</columns>
    <columns>CONTRACT_NUMBER__c</columns>
    <columns>YTD_LEASE_INCOME__c</columns>
    <columns>YTD_RESIDUAL_INCOME__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CONTRACT_START_DATE__c</columns>
    <columns>CONTRACT_END_DATE__c</columns>
    <columns>PERIOD_DATE__c</columns>
    <columns>REMAINING_PAYMENTS__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Committed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All</label>
</ListView>